--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^3.5.1",
     "zustand": "^5.0.9"
